# Halloween2025

./: .gitignore  README.md  cleanup_old_mqtt_topics.py  combined-requirements.txt  halloween-2025-structure.md
config/: dashboard.env  dashboard.env.example  mqtt.yaml.example  worker_host.env
config/secrets/: mqtt_users.env
infra/compose/: docker-compose.dashboard.yml  docker-compose.dev.yml  docker-compose.media.yml  docker-compose.prod.yml  docker-compose.workers.yml  docker-compose.yml
libs/py/: pyproject.toml
libs/py/halloween_common/: __init__.py  mqtt_client.py  mqtt_topics.py
libs/py/tests/integration/mqtt/: test_auth_anonymous.py  test_broker_basics.py  test_lwt_ws_health.py
props/coffin_jumper/: topics.md
props/coffin_jumper/backend/: __init__.py
props/coffin_jumper/firmware/: README.md  copy_to_esp32.bat  copy_to_esp32.ps1  dfplayer.py  main.py  pir_hcsr501.py  secrets.py  secrets.py.example
props/coffin_jumper/plugin/: page.py
props/example_prop/plugin/: page.py
props/tesla_hue_nest/: topics.md
props/tesla_hue_nest/backend/: chromecast_API.py  config.yml  hue_API.py  requirements.txt  tesla_API.py  worker.py
server/api/app/: main.py
server/broker/: README.testing.md  acl  build_passwd.sh  mosquitto.conf  mqtt_entrypoint.sh
server/dashboard/: Dockerfile  README.md  app.py  mqtt_service.py  plugin_loader.py  requirements.txt
server/worker_host/: Dockerfile  WORKERS.md  base.py  collect_requirements.py  loader.py  main.py  mqtt.py  pyproject.toml  requirements.txt  runner.py
server/worker_host/builtin_workers/: heartbeat.py
(+9 files in other folders)
